nakupovalko/prijavaMikrostoritev/k8s/nakupovalko-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primerjalnikcen-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: primerjalnikcen
  template:
    metadata:
      labels:
        app: primerjalnikcen
    spec:
      containers:
        - image: foovo/primerjalnikcen
          name: primerjalnikcen
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: primerjalnikcen
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: primerjalnikcen
