nakupovalko/prijavaMikrostoritev/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakupovalko-ingress
  namespace: nakupovalko
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production #cert-manager-webhook-duckdns-staging

spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: nakupovalko.duckdns.org
      http:
        paths:
          # Keycloak
          #- path: /realms/nakupovalko/protocol/openid-connect/token
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080


          # Prijava
          - path: /nakupovalko-login
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8082

          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8082

          - path: /login.js
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081

          - path: /home.js
            pathType: Prefix
            backend:
              service:
                name: prijava-service
                port:
                  number: 8081


  tls:
    - hosts:
        - nakupovalko.duckdns.org
      secretName: ingress-tls
